--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -83,7 +83,32 @@ header{
 }
 
 .menu .text-menu-selected{
-            color: #45a2fd;
+            color: #46a2fd;
+}
+
+.menu nav ul li a i{
+            display: none;
+}
+
+#icon-menu{
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            right: 20px;
+            top: 16px;
+            padding: 10px;
+            font-size: 20px;
+            background: #eeeeeefa;
+            border-radius: 100%;
+            color: #787878;
+            justify-content: center;
+            align-items: center;
+            display: none;
+            cursor: pointer;
+}
+
+#icon-menu:hover{
+            opacity: 0.8;
 }
 
 /*Portada*/
@@ -289,3 +314,103 @@ footer .redes-footer .fa-youtube:hover{
             font-weight: 500;
             font-size: 18px;
 }
+
+/*Responsive Desing adaptable a dispositivos moviles*/
+@media screen and (max-width:1220px){
+            .header-content,
+            .container-content,
+            .container-footer footer{
+                        max-width: 1000px;
+                        padding: 0 20px;
+            }
+}
+
+@media screen and (max-width:1020px){
+            .container-content{
+                        width: 100%;
+                        flex-direction: column;
+            }
+
+            article{
+                        box-shadow: 0 0 0 0;
+            }
+
+            .container-aside{
+                        display: flex;
+                        justify-content: center;
+            }
+
+            .container-aside aside{
+                        max-width: 300px;
+                        margin: 10px;
+            }
+}
+
+@media screen and (max-width:800px){
+
+            body{
+              overflow-x: hidden;     
+            }
+
+            .container-all{
+                        transition: all 300ms cubic-bezier(1,0,0,1);
+
+            }
+
+            .move-container-all{
+                        transform: translateX(300px);
+            }
+
+            .menu{
+                        width: 0px; /*ocultamos menu temporalmente*/
+                        height: 100vh;
+                        position: fixed;
+                        top: 80px;
+                        left: 0;
+                        background: #fff;
+                        overflow: hidden;
+                        transform: translateX(-300px);
+                        box-shadow: 10px 0 20px -25px black;
+                        transition: all 300ms cubic-bezier(1,0,0,1);
+            }
+
+            .show-lateral{
+                        width: 300px;
+                        transform: translateX(0px);
+            }
+
+            .menu nav ul{
+                        flex-direction: column;
+            }
+
+            .menu nav ul li{
+                        max-width: 200px;
+                        height: 50px;
+                        justify-content: flex-start; /*ver este center*/
+            }
+
+            .menu-selected:before{
+                        width: 0;
+            }
+
+            .menu nav ul li a{
+                       margin-top: 40px;
+                       color: #858585;
+            }
+
+            .menu nav ul li a i{
+                        width: 20px;
+                        display: inline-block;
+                        margin-right: 10px;
+                        color: #46a2fd;
+            }
+
+            #icon-menu{
+                        display: flex;
+            }
+
+            .container-aside{
+                        flex-wrap: wrap;
+            }
+}
+
