--- a/CSS/contactoestilos.css
+++ b/CSS/contactoestilos.css
@@ -91,5 +91,123 @@ header{
 }
 
 /*Formulario de contacto*/
+body{
+            background: #18181818;
+            padding: 0 1.5em;
+}
+
+.content{
+    max-width: 1200px;
+    margin-top: 100px;
+    margin-bottom: 100px;           
+}
+
+.logo-contacto{
+            text-align: center;
+            font-size: 40px;
+            margin-bottom: 20px;         
+}
+
+.logo-contacto span{
+            color:#46a2fd ;
+}
+
+.contact-wrapper{
+            box-shadow: 0 0 25px 0 rgba(12, 11, 11, 0.5);
+}
+
+.contact-wrapper > * {
+            padding: 50px;
+}
+
+.contact-form form{
+            margin: 0;
+            padding: 1em;
+}
 
 
+.contact-form form{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form .block{
+            grid-column: 1/3;
+}
+
+.contact-form form p{
+            margin: 0;
+            padding: 1em;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea{
+            width: 100%;
+            padding: .5em;
+            border: none;
+            background: none;
+            outline: 0;
+            border-bottom: 1px solid #18181818;
+}
+
+.contact-form form button{
+            background: #88888888;
+            border: 0;
+            text-transform: uppercase;
+            padding: 1em;
+            outline: 0;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus{
+            background: #d63031;
+            color: #fff;
+            transition: 1s ease-out;
+
+}
+
+.contact-info{
+            background: #888888;
+}
+
+.contact-info h4,
+.contact-info ul,
+.contact-info p{
+            text-align: center;
+            margin: 0 0 1rem 0;
+}
+
+.contact-info ul{
+            list-style: none;
+            padding: 0;
+}
+
+.contact-info ul li{
+            padding: 0.5em;
+}
+
+/*Large Screen*/
+@media (min-width: 700px){
+            body{
+                        padding: 0 4rem;
+            }
+
+            .contact-wrapper{
+                        display: grid;
+                        grid-template-columns: 2fr 1fr;
+            }
+
+            .contact-wrapper >*{
+                        padding: 2em;
+            }
+
+            .contact-info h4,
+            .contact-info ul,
+            .contact-info p{
+                        padding: 1em;
+                        text-align: left;
+            }
+
+
+}
