--- a/CSS/contactoestilos.css
+++ b/CSS/contactoestilos.css
@@ -207,6 +207,7 @@ body{
             .contact-info p{
                         padding: 1em;
                         text-align: left;
+                        font-size: 19px;
             }
 
 
