--- a/CSS/inicioestilos.css
+++ b/CSS/inicioestilos.css
@@ -92,9 +92,6 @@ header{
 
 /*Carrousel*/
 
-body{
-            background-color: rgb(109, 108, 108);
-}
 
 h2{
             text-align: center;
@@ -102,6 +99,14 @@ h2{
             font-size: 40px;
             font-family: 'Source Sans Pro';
             text-shadow: 0 0 6px 0 black;
+            
+}
+
+.titulo-portada h1{
+            margin-top: 270px;
+            text-align: center;
+            font-size: 40px;
+            font-family: 'Source Sans Pro';
 }
 .content-all{
             width: 210px;
@@ -169,3 +174,43 @@ h2{
 
 }
 
+/*About us*/
+
+.titulo-h2{
+            padding: 30px;
+}
+.contenedor-sobre-nosotros{
+            display: flex;
+            justify-content: space-evenly;            
+}
+
+.imagen-about-us{
+            width: 48%;
+}
+
+.sobre-nosotros .contenido-textos{
+            width: 48%;
+}
+
+.contenido-textos h3{
+            margin-bottom: 15px;
+}
+
+.contenido-textos h3 span{
+            background: #4d0686;
+            color: #fff;
+            border-radius: 50%;
+            display: inline-block;
+            text-align: center;
+            width: 30px;
+            height: 30px;
+            padding: 2px;
+            box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
+            margin-right: 5px;
+}
+
+.contenido-textos p{
+            padding: 0 0 30px 15px;
+            font-weight: 300;
+            text-align: justify;
+}
