--- a/CSS/inicioestilos.css
+++ b/CSS/inicioestilos.css
@@ -214,3 +214,70 @@ h2{
             font-weight: 300;
             text-align: justify;
 }
+/*Footer - pie de pagina*/
+.container-footer{
+            width: 100%;
+            padding: 40px 0;
+            background: #f7f7f7;
+            margin-top: 40px;
+}
+
+.container-footer footer{
+            max-width: 1200px;
+            margin: auto;
+}
+
+.container-footer footer .logo-footer{
+            text-align: center;
+}
+
+.container-footer footer .logo-footer img{
+            width: 100px;
+}
+
+.container-footer footer .redes-footer{
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+}
+
+.container-footer footer .redes-footer .icon-redes-footer{
+            font-size: 20px;
+            margin: 20px;
+            background: #efefef;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            color: #a2a2a2;
+}
+
+footer .redes-footer .fa-facebook-f:hover{
+            background: #41579a;
+            color: #fff;
+}
+footer .redes-footer .fa-instagram:hover{
+            background: linear-gradient(to top, #fcde30, #e9712a,#D2313B,#ae4198,#7540A1,#5443A8);
+            color: #fff;
+}
+footer .redes-footer .fa-youtube:hover{
+            background: #de4c34;
+            color: #fff;
+}
+
+.container-footer footer hr{
+            margin-top: 20px;
+            border: none;
+            height: 2px;
+            background: #c0c0c07a;
+}
+
+.container-footer h4{
+            text-align: center;
+            margin-top: 40px;
+            color: #8e8e8e;
+            font-weight: 500;
+            font-size: 18px;
+}
