--- a/CSS/inicioestilos.css
+++ b/CSS/inicioestilos.css
@@ -119,7 +119,7 @@ h2{
 .content-carrousel{
             width: 100%;
             position: absolute;
-            animation: rotar 30s infinite linear;
+            animation: rotar 20s infinite linear;
             transform-style: preserve-3d;
 }
 
@@ -181,7 +181,8 @@ h2{
 }
 .contenedor-sobre-nosotros{
             display: flex;
-            justify-content: space-evenly;            
+            justify-content: space-evenly;
+            
 }
 
 .imagen-about-us{
@@ -214,6 +215,91 @@ h2{
             font-weight: 300;
             text-align: justify;
 }
+
+/*Galeria*/
+.portafolio{
+            background: #f2f2f2;
+}
+
+.galeria-port{
+            display: flex;
+            justify-content:space-evenly;
+            flex-wrap: wrap;
+}
+.imagen-port{
+            width: 23%;
+            margin-bottom: 10px;
+            height: 150px;
+            overflow: hidden;
+            position: relative;
+            cursor: pointer;
+            box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
+}
+.imagen-port > img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+}
+
+.hover-galeria{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            transform:scale(0);
+            background: hsla(273, 91%, 27%, 0.7);
+            transition: transform 0.5s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+}
+
+.hover-galeria img{
+            width: 50px;
+}
+.hover-galeria p{
+            color: #fff;
+}
+.imagen-port:hover .hover-galeria{
+            transform: scale(1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*Footer - pie de pagina*/
 .container-footer{
             width: 100%;
